gerror: Use JS::CaptureCurrentStack for stack info

This uses the new facilities available in JSAPI to define the standard JS
Error properties on GError-marshalled exceptions, rather than the
workaround of creating a new Error object and reading its properties that
was previously used in gjs_context_get_frame_info().

https://bugzilla.gnome.org/show_bug.cgi?id=786183